--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles.css" />
-    <title>Video Player</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="https://s3.amazonaws.com/codecademy-content/courses/React/react-course-bundle.min.js"></script>
-    <script src="/App.compiled.js"></script>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <link rel="icon" href="covid-icon.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
+    <title>Covid Vaccine</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="input-section">
+            <h3>Check Vaccine Availability</h3>
+            <div class="input-bar">
+                <!-- <input type="text" placeholder="Enter city name" id="city"> -->
+                <input type="number" placeholder="Enter PinCode" id="input-pincode">
+                <input type="date" id="input-date" placeholder="dd-mm-yyyy">
+                <button id="submit">Submit</button>
+            </div>
+        </div>
+        <div class="message"></div>
+        <div class="output-section">
+
+        </div>
+    </div>
+</body>
+
 </html>
